[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=3.1.0",
    "numpy>=1.16.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "cfastblf"
version = "0.1.2"
description = "Cython-accelerated BLF file reading/writing and signal query library."
readme = "README.md"
authors = [
    { name = "rockswang", email = "rockswang@foxmail.com" }
]
license = { file = "LICENSE.md" }
urls = { Homepage = "https://github.com/rockswang/cfastblf" }
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.16.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "Cython>=3.1.0",
]

[tool.setuptools]
packages = ["cfastblf"]
